--- a/OurWeb/appsettings.json
+++ b/OurWeb/appsettings.json
@@ -6,4 +6,7 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server:.; Database:OurDB;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
