--- a/OurWeb/appsettings.json
+++ b/OurWeb/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server:.; Database:OurDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.; Database=OurDB;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
